--- a/src/components/forecastTiles/forecast.css
+++ b/src/components/forecastTiles/forecast.css
@@ -4,10 +4,29 @@
     flex-direction:column;
     background-color: lightskyblue;
     text-align: center;
-    margin-left: 30px;
-    height:45vh;
-    width:12vw;
-    border-radius: 5%;
+    margin-left: 5vw;
+    height:350px;
+    width:150px;
+    border-radius: 15px;
     color:white;
-
+    
+}
+Vtemp{
+    margin-left:20px;
+}
+p{
+    margin-bottom:0;
+    margin-top:0;
+}
+h1{
+    margin:0;
+}
+h2{
+    margin:0;
+}
+h3{
+    margin:0;
+}
+h4{
+    margin:0;
 }
