--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgb
   display:flex;
   flex-direction: row;
   justify-content:center;
+  margin-right:1vw;
   margin-bottom: 10px;
   
 }
@@ -34,11 +35,10 @@ background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 0%, rgb
   
 }
 .today-data{
-  height: 100px;
-  width:200px;
-  margin:20px;
+
   text-align: center;
 }
 .searchBtn{
-  width:5vw;
+  background-color: turquoise;
+  color:white;
 }
