--- a/src/components/today/today.css
+++ b/src/components/today/today.css
@@ -1,3 +1,13 @@
+p{
+    margin-bottom:0;
+    margin-top:0;
+}
+h1{
+    margin:0;
+}
+h3{
+    margin:0;
+}
 .today-text{
     margin-bottom: 4px;
     padding:0px;
@@ -12,20 +22,14 @@
 .Vtemp1{
     margin-left:20px;
 }
-p{
-    margin-bottom:0;
-    margin-top:0;
-}
-h1{
-    margin:0;
-}
-h3{
-    margin:0;
-}
 .today{
     
     height: 400px;
     width: 700px;
     background-size: cover;
     
+}
+.weather_model{
+    height: 120px;
+    width:auto;
 }
